완전한 설치 가이드 및 패키지 목록 추가
- 완전한 requirements.txt 업데이트 (모든 필수 패키지 포함)
- requirements_complete.txt 백업 파일 추가
- SETUP_GUIDE.md 상세한 설치 가이드 추가
- setup.ps1 자동 설치 스크립트 추가
- 번역 서비스 추가 (translation.py)
- 다른 컴퓨터에서 실행을 위한 완전한 환경 구성

--- a/backend/requirements_complete.txt
+++ b/backend/requirements_complete.txt
@@ -27,5 +27,9 @@ langdetect==1.0.9
 # Music API
 spotipy==2.23.0
 
-# HTTP Requests
+# HTTP Requests and Utilities
 requests==2.31.0
+base64
+
+# Standard Library (already included in Python)
+# pathlib, logging, time, secrets, hashlib, os, sys, asyncio, datetime, typing
