--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,20 @@
     "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "axios": "^1.6.2",
-    "zustand": "^4.4.7",
-    "recharts": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.18",
     "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
     "@mui/x-charts": "^6.18.1",
-    "dayjs": "^1.11.10"
+    "axios": "^1.6.2",
+    "chart.js": "^4.5.0",
+    "dayjs": "^1.11.10",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1",
+    "recharts": "^2.8.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -35,7 +37,12 @@
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
   },
-  "keywords": ["emotion", "music", "recommendation", "react"],
+  "keywords": [
+    "emotion",
+    "music",
+    "recommendation",
+    "react"
+  ],
   "author": "",
   "license": "MIT"
 }
